--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Vue Mastery</title>
-    <!-- Import Styles -->
-    <link rel="stylesheet" href="./assets/styles.css" />
-    <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
-  </head>
-  <body>
-    <div id="app">
-      <h1>Product goes here</h1>
-    </div>
 
-    <!-- Import Js -->
-    <script src="./main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Vue Mastery</title>
+
+  <link rel="stylesheet" href="./assets/styles.css" />
+
+  <script src="https://unpkg.com/vue@3"></script>
+</head>
+
+<body>
+  <div id="app">
+    <div class="nav-bar"></div>
+
+    <div class="cart">Cart({{cart.length}})</div>
+
+    <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="emptyCart"></product-display>
+
+  </div>
+
+  <script src="./main.js"></script>
+
+  <script src="./components/ProductDisplay.js"></script>
+  <script src="./components/ReviewForm.js"></script>
+  <script src="./components/ReviewList.js"></script>
+
+  <script>
+    const mountedApp = app.mount('#app');
+  </script>
+</body>
+
 </html>
